yanl/examples/t1/fail/functie_stard_2.yanl
# writeString trebuie apelat cu parametru array de oricate elemente of char

program dude;
var a:array[20..50] of integer;
begin
	writestring("ok");
	writestring(a);
end.